[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Uranium-Engine"
version = "0.1.0"
description = "Uranium-Engine – hybrid encryption and cryptographic utilities for Python."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Alexx-coder", email = "alexx-coder@internet.ru"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
keywords = ["cryptography", "fast", "hybrid-encryption"]
dependencies = [
    "cryptography>=42.0.0,<48.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "mypy>=1.10",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["UraniumEngine*"]

[tool.setuptools.package-data]
UraniumEngine = ["py.typed", "*.txt"]